--- a/src/Providers/LeafletV1/LeafletV1.csproj
+++ b/src/Providers/LeafletV1/LeafletV1.csproj
@@ -249,4 +249,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\..\..\packages\AutoMapper.3.3.1\tools\AutoMapper.targets" Condition="Exists('..\..\..\packages\AutoMapper.3.3.1\tools\AutoMapper.targets')" />
+  <PropertyGroup>
+    <PostBuildEvent>$(SolutionDir)nuget\nuget.exe pack "$(ProjectPath)" -OutputDirectory "$(SolutionDir)nuget"</PostBuildEvent>
+  </PropertyGroup>
 </Project>
